--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/reset.min.css"> <!--перестали работать теги i,b,br в block2-->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="header">
@@ -48,7 +49,7 @@
         <img src="file:///Users/anna/Web/images/logo2.png" alt="logo2" width="115" height="115">
         <p>
           Pied Piper's new internet is built for <i>users, by users.</i> <br>
-          You supply the storage, compute, and networking resources that<br> 
+          You supply the storage, compute, and networking resources that <br> 
           power our entire decentralized web.
         </p>
       </div>  
@@ -102,12 +103,7 @@
           </div>
           <div class="member">
             <img src="file:///Users/anna/Web/images/team5.png" alt="team5">
-            <p>
-              Monica Hall
-            </p>
-            <p>
-              Chief Financial Officer
-            </p>
+            <h1>Monica Hall <span>Chief Financial Officer</span></h1>
           </div>
           <div class="member">
             <img src="file:///Users/anna/Web/images/team6.png" alt="team6">
