--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/reset.min.css"> <!--перестали работать теги i,b,br в block2-->
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <div class="header">
-    <img src="file:///Users/anna/Web/images/logo1.png" alt="лого" width="184" height="45">
+    <img src="/images/logo1.png" alt="лого">
     <div class="menu">
-      <span>the problem</span>
+      <span> <a href="#theproblem">the problem</a></span>
       <span>|</span>
-      <span>PiedPiperoin</span>
+      <span><a href="#PiedPiperoin">PiedPiperoin</a></span>
       <span>|</span>
-      <span>the team</span>
+      <span><a href="#theteam">the team</a></span>
     </div>
   </div>
   <div class="content">
     <div class="block1">
       <h1>PiperNet is Here</h1>      
     </div>
+    <a name="theproblem"></a>
     <div class="block2">
-        <h1>The Problem</h1>    
+      <div class="container">
+        <h2>The Problem</h2>    
         <p>
           Beneath the flashy homepages of your favorite sites lurk Hooli™ and other evil corporations 
           out to hoard and sell your most personal data.
@@ -35,7 +38,8 @@
         </p>
         <p>
           Put even simpler — <b>it’s the internet, completely decentralized.</b>
-        </p>  
+        </p> 
+      </div>
     </div>
     <div class="block3">
         <p><i>We’re in this together! All of our<br>
@@ -43,77 +47,84 @@
           to make the strongest supercomputer the<br>
           world has ever seen.</i></p>     
     </div>
+    <a name="PiedPiperoin"></a>
     <div class="block4">
-      <h1>Introducing PiedPiperCoin</h1>  
-      <div class="logo_paragraph">
-        <img src="file:///Users/anna/Web/images/logo2.png" alt="logo2" width="115" height="115">
-        <p>
-          Pied Piper's new internet is built for <i>users, by users.</i> <br>
-          You supply the storage, compute, and networking resources that <br> 
-          power our entire decentralized web.
-        </p>
-      </div>  
-      <p>
-        Now there's a way to give credit where credit is due. Compute credit, that is!<br>
-        The more you share your device resources, the more PiedPiperCoin you <br>receive. 
-      </p> 
-      <p>
-        Whether you're a developer with an app ready for market, or just an Average<br> 
-        Joe with a smartphone you'll love all you can do with PiedPiperCoin.
-      </p>  
+      <div class="container">
+          <h2>Introducing PiedPiperCoin</h2>  
+          <div class="logo_paragraph">
+            <img src="/images/logo2.png" alt="logo2">
+            <p>
+              Pied Piper's new internet is built for <i>users, by users.</i> <br>
+              You supply the storage, compute, and networking resources that <br> 
+              power our entire decentralized web.
+            </p>
+          </div>  
+          <p>
+            Now there's a way to give credit where credit is due. Compute credit, that is!<br>
+            The more you share your device resources, the more PiedPiperCoin you <br>receive. 
+          </p> 
+          <p>
+            Whether you're a developer with an app ready for market, or just an Average<br> 
+            Joe with a smartphone you'll love all you can do with PiedPiperCoin.
+          </p>  
+      </div>
     </div>
+    <a name="theteam"></a>
     <div class="block_team">
-      <h1>The Team</h1>
-      <div class="block_team_foto"> 
-        <div class="member">
-            <img src="file:///Users/anna/Web/images/team1.png" alt="team1">
-            <p>
-              Richard Hendricks            
-            </p>
-            <p>
-              Founder & CEO       
-            </p>
+      <div class="container">
+         <h2>The Team</h2>
+        <div class="block_team_foto"> 
+          <div class="member">
+              <img src="/images/team1.png" alt="team1">
+              <p>
+                Richard Hendricks            
+              </p>
+              <p>
+                Founder & CEO       
+              </p>
+          </div>
+            <div class="member">
+              <img src="/images/team2.png" alt="team2">
+              <p>
+                Dinesh Chugtai          
+              </p>
+              <p>
+                Senior Programmer
+              </p>
+            </div>
+            <div class="member">
+              <img src="/images/team3.png" alt="team3">
+              <p>
+                Bertram Gilfoyle  
+              </p>
+              <p>
+                Chief Systems Architect
+              </p>
+            </div>
+            <div class="member">
+              <img src="/images/team4.png" alt="team4">
+              <p>
+                Jared Dunn
+              </p>
+              <p>
+                Chief Operating Officer
+              </p>
+            </div>
+            <div class="member">
+              <img src="/images/team5.png" alt="team5">
+              <p>Monica Hall </p>
+              <p>Chief Financial Officer</p>
+            </div>
+            <div class="member">
+              <img src="/images/team6.png" alt="team6">
+              <p>
+                Nelson Bighetti
+              </p>
+              <p>
+                Majority Investor
+              </p>
+            </div>
         </div>
-          <div class="member">
-            <img src="file:///Users/anna/Web/images/team2.png" alt="team2">
-            <p>
-              Dinesh Chugtai          
-            </p>
-            <p>
-              Senior Programmer
-            </p>
-          </div>
-          <div class="member">
-            <img src="file:///Users/anna/Web/images/team3.png" alt="team3">
-            <p>
-              Bertram Gilfoyle  
-            </p>
-            <p>
-              Chief Systems Architect
-            </p>
-          </div>
-          <div class="member">
-            <img src="file:///Users/anna/Web/images/team4.png" alt="team4">
-            <p>
-              Jared Dunn
-            </p>
-            <p>
-              Chief Operating Officer
-            </p>
-          </div>
-          <div class="member">
-            <img src="file:///Users/anna/Web/images/team5.png" alt="team5">
-            <h1>Monica Hall <span>Chief Financial Officer</span></h1>
-          </div>
-          <div class="member">
-            <img src="file:///Users/anna/Web/images/team6.png" alt="team6">
-            <p>
-              Nelson Bighetti
-            </p>
-            <p>
-              Majority Investor
-            </p>
-          </div>
       </div>
     </div>
     <div class="footer">
